--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ body {
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #encabezado {
@@ -159,6 +160,7 @@ element {
     color: aliceblue;
     display:inline-table;
     text-align: right;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .menu {
